--- a/css/index.css
+++ b/css/index.css
@@ -69,6 +69,7 @@ h1, h2, h3, h4, h5, h6, ol, ul, li, a, p{
     color: #fff;
     font-size: 30px;
     border-radius: 100%;
+    border: none;
 }
 
 .area .box .save {
